@startuml
skinparam classAttributeIconSize 0
left to right direction

class "Company" as C {
-String designation
+getTestTypeStore()
+getParameterCategoryStore()
}

class "TestTypeMapper" as ttM{
+List <TestTypeDto> toDto(List<TestType>)
}

class "TestTypeStore" as TTS{
+TestType createTestType(code, description, collectingMethod, parameterCategory)
+TestType createTestType(code, description, collectingMethod, parameterCategoriesList)
+boolean saveTestType(tt)
+boolean validateTestType(tt)
+boolean addTestType(tt)
+List <TestType> getAllTestTypes()
}

class "CreateParameterCategoryController" as PCS{
+List <ParameterCategoryDto> getAllParameterCategoriesDto()
+ParameterCategory getParameterCategoryByCode(code)
}

class "TestType" as TT {
-String code
-String description
-String collectingMethod
-ParameterCategory parameterCategory
-List <ParameterCategory> parameterCategoriesList
+TestType(code, description, collectingMethod, parameterCategory)
+TestType(code, description, collectingMethod, parameterCategoriesList)
}

class "CreateTestTypeController" as CTTC {
+CreateTestTypeController()
+List<TestTypeDto> getAllTestTypesDto()
+boolean createTestType(code, description, collectingMethod, parameterCategory)
+boolean createTestType(code, description, collectingMethod, parameterCategoriesList)
+boolean saveTestType()
+List<TestType> getAllTestTypes()
}

class "ParameterCategory" as PC{
-String name
-String code
+ParameterCategory(name, code)
}

class "CreateTestTypeUI" as CTTUI
class "TestType" as TT
class "CreateTestTypeController" as CTTC

CTTUI ..> CTTC

C ..> PCS

TTS ..> C


CTTC ..> C
CTTC ..> ttM

TT "*" -- "1" PC : > analyzes a

C "1" -- "*" TT : > adopts
C "1" -- "*" PC : > adopts

@enduml